@@ -1,5 +1,5 @@
 /* ColorModel.java --
-Copyright (C) 2004  Free Software Foundation
+   Copyright (C) 2004  Free Software Foundation
 
 This file is part of GNU Classpath.
 
@@ -34,6 +34,7 @@ or based on this library.  If you modify this library, you may extend
 this exception to your version of the library, but you are not
 obligated to do so.  If you do not wish to do so, delete this
 exception statement from your version. */
+
 
 package java.awt.image;
 
@@ -156,7 +157,7 @@ public class ColorConvertOp implements BufferedImageOp, RasterOp
    * @see java.awt.image.BufferedImageOp#filter(java.awt.image.BufferedImage,
    java.awt.image.BufferedImage)
    */
-  public BufferedImage filter(BufferedImage src, BufferedImage dst)
+  public final BufferedImage filter(BufferedImage src, BufferedImage dst)
   {
     // TODO: The plan is to create a scanline buffer for intermediate buffers.
     // For now we just suck it up and create intermediate buffers.
@@ -204,13 +205,13 @@ public class ColorConvertOp implements BufferedImageOp, RasterOp
 			     null);
   }
   
-  public ICC_Profile[] getICC_Profiles()
+  public final ICC_Profile[] getICC_Profiles()
   {
     return profiles;
   }
 
   /** Return the rendering hints for this op. */
-  public RenderingHints getRenderingHints()
+  public final RenderingHints getRenderingHints()
   {
     return hints;
   }
@@ -218,7 +219,7 @@ public class ColorConvertOp implements BufferedImageOp, RasterOp
   /* (non-Javadoc)
    * @see java.awt.image.RasterOp#filter(java.awt.image.Raster, java.awt.image.WritableRaster)
    */
-  public WritableRaster filter(Raster src, WritableRaster dest)
+  public final WritableRaster filter(Raster src, WritableRaster dest)
   {
     if (!rasterValid)
       throw new IllegalArgumentException();
@@ -258,7 +259,7 @@ public class ColorConvertOp implements BufferedImageOp, RasterOp
    * @param dst The destination point.
    * @see java.awt.image.RasterOp#getPoint2D(java.awt.geom.Point2D, java.awt.geom.Point2D)
    */
-  public Point2D getPoint2D(Point2D src, Point2D dst)
+  public final Point2D getPoint2D(Point2D src, Point2D dst)
   {
     if (dst == null) return (Point2D)src.clone();
     dst.setLocation(src);
@@ -268,7 +269,7 @@ public class ColorConvertOp implements BufferedImageOp, RasterOp
   /* (non-Javadoc)
    * @see java.awt.image.BufferedImageOp#getBounds2D(java.awt.image.BufferedImage)
    */
-  public Rectangle2D getBounds2D(BufferedImage src)
+  public final Rectangle2D getBounds2D(BufferedImage src)
   {
     return src.getRaster().getBounds();
   }
@@ -276,7 +277,7 @@ public class ColorConvertOp implements BufferedImageOp, RasterOp
   /* (non-Javadoc)
    * @see java.awt.image.RasterOp#getBounds2D(java.awt.image.Raster)
    */
-  public Rectangle2D getBounds2D(Raster src)
+  public final Rectangle2D getBounds2D(Raster src)
   {
     return src.getBounds();
   }
