@@ -1,5 +1,5 @@
 /* LookupOp.java -- Filter that converts each pixel using a lookup table.
-Copyright (C) 2004  Free Software Foundation
+   Copyright (C) 2004  Free Software Foundation
 
 This file is part of GNU Classpath.
 
@@ -34,6 +34,7 @@ or based on this library.  If you modify this library, you may extend
 this exception to your version of the library, but you are not
 obligated to do so.  If you do not wish to do so, delete this
 exception statement from your version. */
+
 
 package java.awt.image;
 
